--- a/NP_Config/App.xaml
+++ b/NP_Config/App.xaml
@@ -4,6 +4,10 @@
              xmlns:local="clr-namespace:NP_Config"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Dictionary_DarkStyle.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
