--- a/NP_Config/WorkPage.xaml
+++ b/NP_Config/WorkPage.xaml
@@ -5,11 +5,45 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:NP_Config"
       mc:Ignorable="d" 
-      d:DesignHeight="550" d:DesignWidth="900"
+      d:DesignHeight="440" d:DesignWidth="900"
       Title="WorkPage">
 
     <Grid Style="{DynamicResource GridStyle_Type2}">
-        <TextBox x:Name="sxx" HorizontalAlignment="Left" Height="45" Margin="236,144,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="299"/>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition></ColumnDefinition>
+            <ColumnDefinition></ColumnDefinition>
+            <ColumnDefinition></ColumnDefinition>
+        </Grid.ColumnDefinitions>
+        
+        <Grid Grid.Column="0" Margin="8">
+            <Border Style="{DynamicResource BorderStyle_Type1}">
+                <Border.Effect>
+                    <DropShadowEffect ShadowDepth="3" BlurRadius="20" Opacity="0.7"/>
+                </Border.Effect>
+                <Grid>
+                    
+                </Grid>
+            </Border>
+        </Grid>
+        <Grid Grid.Column="1" Margin="8">
+            <Border Style="{DynamicResource BorderStyle_Type1}">
+                <Border.Effect>
+                    <DropShadowEffect ShadowDepth="3" BlurRadius="20" Opacity="0.7"/>
+                </Border.Effect>
+                <Grid>
 
+                </Grid>
+            </Border>
+        </Grid>
+        <Grid Grid.Column="2" Margin="8">
+            <Border Style="{DynamicResource BorderStyle_Type1}">
+                <Border.Effect>
+                    <DropShadowEffect ShadowDepth="3" BlurRadius="20" Opacity="0.7"/>
+                </Border.Effect>
+                <Grid>
+
+                </Grid>
+            </Border>
+        </Grid>
     </Grid>
 </Page>
