--- a/NP_Config/WorkPage.xaml
+++ b/NP_Config/WorkPage.xaml
@@ -41,7 +41,13 @@
                     <DropShadowEffect ShadowDepth="3" BlurRadius="20" Opacity="0.7"/>
                 </Border.Effect>
                 <Grid>
+                    <Button Width="50" Height="20" Content="Button" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="30,30,0,0" Style="{DynamicResource ButtonStyle_Type1}"/>
+                    <Button Width="50" Height="20" Content="Button" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="100,30,0,0" Style="{DynamicResource ButtonStyle_Type2}"/>
 
+
+                    <TextBlock Text="DDDDDD" Width="100" Height="20" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="30,70,0,0" Style="{DynamicResource TextBlockStyle_Type3}"/>
+
+                    <TextBox Text="HHHH" Width="100" Height="20" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="30,100,0,0" Style="{DynamicResource TextBoxStyle_Type1}"/>
                 </Grid>
             </Border>
         </Grid>
