разработка интерфейса станицы настройки NP

--- a/NP_Config/Dictionary_DarkStyle.xaml
+++ b/NP_Config/Dictionary_DarkStyle.xaml
@@ -9,6 +9,11 @@
     <SolidColorBrush x:Key="Color_5" Color="#FF507348"/>
     <SolidColorBrush x:Key="Color_6" Color="#FFD4D7D8"/>
 
+    <Color x:Key="Color_textbox_1">#FF17191D</Color>
+    <Color x:Key="Color_textbox_2">#FF212328</Color>
+    <Color x:Key="Color_textbox_3">#FF2D3238</Color>
+    <Color x:Key="Color_textbox_4">#FF9A9C9D</Color>
+
 
     <!-- BUTTON -->
     <Style x:Key="ButtonStyle_Menu1" TargetType="Button">
@@ -16,6 +21,8 @@
         <Setter Property="Foreground" Value="{StaticResource Color_4}"/>
         <Setter Property="FontSize" Value="15"/>
         <Setter Property="Height" Value="30"/>
+        <Setter Property="UseLayoutRounding" Value="True"/>
+        <Setter Property="Panel.ZIndex" Value="1"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type Button}">
@@ -44,6 +51,7 @@
         <Setter Property="Foreground" Value="{StaticResource Color_6}"/>
         <Setter Property="FontSize" Value="16"/>
         <Setter Property="Height" Value="30"/>
+        <Setter Property="Panel.ZIndex" Value="0"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type Button}">
@@ -63,6 +71,7 @@
         <Setter Property="Width" Value="40"/>
         <Setter Property="FontSize" Value="12"/>
         <Setter Property="Height" Value="20"/>
+        <Setter Property="UseLayoutRounding" Value="True"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type Button}">
@@ -91,11 +100,13 @@
     <Style x:Key="ButtonStyle_Type1" TargetType="{x:Type Button}">
         <Setter Property="Background" Value="{StaticResource Color_3}" />
         <Setter Property="Foreground" Value="{StaticResource Color_4}"/>
+        <Setter Property="UseLayoutRounding" Value="True"/>
         <Setter Property="FontSize" Value="13"/>
+            
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="Button">
-                    <Border Background="{TemplateBinding Background}" CornerRadius="2" RenderOptions.BitmapScalingMode="NearestNeighbor" >
+                    <Border Background="{TemplateBinding Background}" CornerRadius="2">
                         <Border.Effect>
                             <DropShadowEffect BlurRadius="3" ShadowDepth="1" Opacity="0.5"/>
                         </Border.Effect>
@@ -112,38 +123,16 @@
                 <Setter Property="FontSize" Value="14"/>
                 <Setter Property="Foreground" Value="{StaticResource Color_6}"/>
             </Trigger>
-        </Style.Triggers>
-    </Style>
-
-    <Style x:Key="ButtonStyle_Type2" TargetType="{x:Type Button}">
-        <Setter Property="Background" Value="{StaticResource Color_3}" />
-        <Setter Property="Foreground" Value="{StaticResource Color_4}"/>
-        <Setter Property="FontSize" Value="13"/>
-        <Setter Property="Template">
-            <Setter.Value>
-                <ControlTemplate TargetType="Button">
-                    <Border Background="{TemplateBinding Background}" CornerRadius="2" >
-                        <Border.Effect>
-                            <DropShadowEffect BlurRadius="3" ShadowDepth="1" Opacity="0.5"/>
-                        </Border.Effect>
-                        <Grid>
-                            <ContentPresenter VerticalAlignment="{TemplateBinding VerticalContentAlignment}" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" ContentSource="{TemplateBinding Content}"/>
-                        </Grid>
-                    </Border>
-                </ControlTemplate>
-            </Setter.Value>
-        </Setter>
-
-        <Style.Triggers>
-            <Trigger Property="IsMouseOver" Value="True">
+            <Trigger Property="IsPressed" Value="True">
                 <Setter Property="FontSize" Value="14"/>
-                <Setter Property="Foreground" Value="{StaticResource Color_6}"/>
+                <Setter Property="Foreground" Value="{StaticResource Color_5}"/>
             </Trigger>
         </Style.Triggers>
     </Style>
 
     <Style x:Key="ButtonStyle_Window_Minimizate" TargetType="Button">
         <Setter Property="BorderThickness" Value="0"/>
+        <Setter Property="UseLayoutRounding" Value="True"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="Button">
@@ -186,6 +175,7 @@
 
     <Style x:Key="ButtonStyle_Window_All_Size" TargetType="Button">
         <Setter Property="BorderThickness" Value="0"/>
+        <Setter Property="UseLayoutRounding" Value="True"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="Button">
@@ -228,6 +218,7 @@
 
     <Style x:Key="ButtonStyle_Window_Close" TargetType="Button">
         <Setter Property="BorderThickness" Value="0"/>
+        <Setter Property="UseLayoutRounding" Value="True"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="Button">
@@ -297,15 +288,19 @@
         <Setter Property="FontSize" Value="13"/>
     </Style>
 
+    <!-- TEXTBOX -->
     <Style x:Key="TextBoxStyle_Type1" TargetType="TextBox">
+        <Setter Property="Foreground" Value="{StaticResource Color_1}" />
+        <Setter Property="FontSize" Value="13"/>
         <Setter Property="Template">
             <Setter.Value>
-                <ControlTemplate TargetType="TextBox">
-                    <Grid>
-                        <Border>
-                            <TextBlock Style="{DynamicResource TextBlockStyle_Type3}"/>
-                        </Border>
-                    </Grid>
+                <ControlTemplate TargetType="{x:Type TextBoxBase}">
+                    <Border Name="Border" CornerRadius="2" Padding="2">
+                        <Border.Background>
+                            <SolidColorBrush Color="{StaticResource Color_textbox_4}" />
+                        </Border.Background>
+                        <ScrollViewer Margin="0" x:Name="PART_ContentHost" />
+                    </Border>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
