--- a/NP_Config/MainWindow.xaml
+++ b/NP_Config/MainWindow.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="520" Width="1000" Topmost="False" WindowStartupLocation="CenterScreen" WindowStyle="None" ResizeMode="CanResizeWithGrip" AllowsTransparency="True">
     <Grid>
-        <Border BorderThickness="1" BorderBrush="#FF5C606B">
+        <Border BorderThickness="1" BorderBrush="#FF5C606B" UseLayoutRounding="True">
             <Grid Style="{DynamicResource GridStyle_Type2}">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="100"></ColumnDefinition>
