--- a/NP_Config/WorkPage.xaml
+++ b/NP_Config/WorkPage.xaml
@@ -1,27 +1,26 @@
 ﻿<Page x:Class="NP_Config.WorkPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:NP_Config"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       mc:Ignorable="d" 
       d:DesignHeight="440" d:DesignWidth="900"
       Title="WorkPage">
 
     <Grid Style="{DynamicResource GridStyle_Type2}">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition></ColumnDefinition>
-            <ColumnDefinition></ColumnDefinition>
+            <ColumnDefinition Width="200"></ColumnDefinition>
+            <ColumnDefinition Width="200"></ColumnDefinition>
             <ColumnDefinition></ColumnDefinition>
         </Grid.ColumnDefinitions>
-        
+
         <Grid Grid.Column="0" Margin="8">
             <Border Style="{DynamicResource BorderStyle_Type1}" UseLayoutRounding="True">
                 <Border.Effect>
                     <DropShadowEffect ShadowDepth="3" BlurRadius="20" Opacity="0.7"/>
                 </Border.Effect>
                 <Grid>
-                    
+
                 </Grid>
             </Border>
         </Grid>
@@ -41,12 +40,127 @@
                     <DropShadowEffect ShadowDepth="3" BlurRadius="20" Opacity="0.7"/>
                 </Border.Effect>
                 <Grid>
-                    <Button Width="50" Height="20" Content="Button" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="30,30,0,0" Style="{DynamicResource ButtonStyle_Type1}"/>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="60"></RowDefinition>
+                        <RowDefinition Height="140"></RowDefinition>
+                        <RowDefinition></RowDefinition>
+                    </Grid.RowDefinitions>
+                    
+                    <!--<Button Width="50" Height="20" Content="Button" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="230,63,0,0" Style="{DynamicResource ButtonStyle_Type1}"/>-->
+
+                    <Grid Grid.Row="0">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition></ColumnDefinition>
+                            <ColumnDefinition></ColumnDefinition>
+                            <ColumnDefinition></ColumnDefinition>
+                        </Grid.ColumnDefinitions>
+                        
+                        <Grid Grid.Column="0">
+                            <TextBlock Text="Датчики слева" Width="110" Height="20" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,5,0,0" Style="{DynamicResource TextBlockStyle_Type3}" TextAlignment="Center"/>
+                            <TextBox PreviewTextInput="Cheking_for_numbers" Width="50" Height="18" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,25,0,0" Style="{DynamicResource TextBoxStyle_Type1}" TextAlignment="Center"/>
+                        </Grid>
+                        <Grid Grid.Column="1">
+                            <TextBlock Text="Название участка" Width="110" Height="20" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,5,0,0" Style="{DynamicResource TextBlockStyle_Type3}" TextAlignment="Center"/>
+                            <TextBox Width="130" Height="18" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,25,0,0" Style="{DynamicResource TextBoxStyle_Type1}"/>
+                        </Grid>
+                        <Grid Grid.Column="2">
+                            <TextBlock Text="Датчики справа" Width="110" Height="20" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,5,0,0" Style="{DynamicResource TextBlockStyle_Type3}" TextAlignment="Center"/>
+                            <TextBox PreviewTextInput="Cheking_for_numbers" Width="50" Height="18" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,25,0,0" Style="{DynamicResource TextBoxStyle_Type1}" TextAlignment="Center"/>
+                        </Grid>
+                    </Grid>
+
+                    <Grid Grid.Row="1">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition></ColumnDefinition>
+                            <ColumnDefinition></ColumnDefinition>
+                            <ColumnDefinition></ColumnDefinition>
+                        </Grid.ColumnDefinitions>
+
+                        <Grid Grid.Column="0">
+                            <Grid.RowDefinitions>
+                                <RowDefinition></RowDefinition>
+                                <RowDefinition></RowDefinition>
+                                <RowDefinition></RowDefinition>
+                                <RowDefinition></RowDefinition>
+                                <RowDefinition></RowDefinition>
+                                <RowDefinition></RowDefinition>
+                            </Grid.RowDefinitions>
+                            <Grid Grid.Row="0">
+                                <TextBlock Text="Адрес"  Height="20" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,0,100,0" Style="{DynamicResource TextBlockStyle_Type3}" TextAlignment="Center"/>
+                                <TextBlock Text="NP"  Height="20" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,0,0,0" Style="{DynamicResource TextBlockStyle_Type3}" TextAlignment="Center"/>
+                                <TextBlock Text="Канал"  Height="20" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="100,0,0,0" Style="{DynamicResource TextBlockStyle_Type3}" TextAlignment="Center"/>
+                            </Grid>
+                            <Grid Grid.Row="1">
+                                <TextBox PreviewTextInput="Cheking_for_numbers" Width="40" Height="18" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,0,100,0" Style="{DynamicResource TextBoxStyle_Type1}" TextAlignment="Center"/>
+                                <TextBox PreviewTextInput="Cheking_for_numbers" Width="40" Height="18" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0" Style="{DynamicResource TextBoxStyle_Type1}" TextAlignment="Center"/>
+                                <TextBox PreviewTextInput="Cheking_for_numbers" Width="40" Height="18" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="100,0,0,0" Style="{DynamicResource TextBoxStyle_Type1}" TextAlignment="Center"/>
+                            </Grid>
+                            <Grid Grid.Row="2">
+                                <TextBox PreviewTextInput="Cheking_for_numbers" Width="40" Height="18" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,0,100,0" Style="{DynamicResource TextBoxStyle_Type1}" TextAlignment="Center"/>
+                                <TextBox PreviewTextInput="Cheking_for_numbers" Width="40" Height="18" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0" Style="{DynamicResource TextBoxStyle_Type1}" TextAlignment="Center"/>
+                                <TextBox PreviewTextInput="Cheking_for_numbers" Width="40" Height="18" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="100,0,0,0" Style="{DynamicResource TextBoxStyle_Type1}" TextAlignment="Center"/>
+                            </Grid>
+                            <Grid Grid.Row="3">
+                                <TextBox PreviewTextInput="Cheking_for_numbers" Width="40" Height="18" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,0,100,0" Style="{DynamicResource TextBoxStyle_Type1}" TextAlignment="Center"/>
+                                <TextBox PreviewTextInput="Cheking_for_numbers" Width="40" Height="18" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0" Style="{DynamicResource TextBoxStyle_Type1}" TextAlignment="Center"/>
+                                <TextBox PreviewTextInput="Cheking_for_numbers" Width="40" Height="18" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="100,0,0,0" Style="{DynamicResource TextBoxStyle_Type1}" TextAlignment="Center"/>
+                            </Grid>
+                            <Grid Grid.Row="4">
+                                <TextBox PreviewTextInput="Cheking_for_numbers" Width="40" Height="18" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,0,100,0" Style="{DynamicResource TextBoxStyle_Type1}" TextAlignment="Center"/>
+                                <TextBox PreviewTextInput="Cheking_for_numbers" Width="40" Height="18" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0" Style="{DynamicResource TextBoxStyle_Type1}" TextAlignment="Center"/>
+                                <TextBox PreviewTextInput="Cheking_for_numbers" Width="40" Height="18" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="100,0,0,0" Style="{DynamicResource TextBoxStyle_Type1}" TextAlignment="Center"/>
+                            </Grid>
+                            <Grid Grid.Row="5">
+                                <TextBox PreviewTextInput="Cheking_for_numbers" Width="40" Height="18" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,0,100,0" Style="{DynamicResource TextBoxStyle_Type1}" TextAlignment="Center"/>
+                                <TextBox PreviewTextInput="Cheking_for_numbers" Width="40" Height="18" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0" Style="{DynamicResource TextBoxStyle_Type1}" TextAlignment="Center"/>
+                                <TextBox PreviewTextInput="Cheking_for_numbers" Width="40" Height="18" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="100,0,0,0" Style="{DynamicResource TextBoxStyle_Type1}" TextAlignment="Center"/>
+                            </Grid>
+                        </Grid>
 
 
-                    <TextBlock Text="DDDDDD" Width="100" Height="20" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="30,70,0,0" Style="{DynamicResource TextBlockStyle_Type3}"/>
-
-                    <TextBox PreviewTextInput="Cheking_for_numbers" Width="100" Height="63" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="30,100,0,0" Style="{DynamicResource TextBoxStyle_Type1}"/>
+                        <Grid Grid.Column="2">
+                            <Grid.RowDefinitions>
+                                <RowDefinition></RowDefinition>
+                                <RowDefinition></RowDefinition>
+                                <RowDefinition></RowDefinition>
+                                <RowDefinition></RowDefinition>
+                                <RowDefinition></RowDefinition>
+                                <RowDefinition></RowDefinition>
+                            </Grid.RowDefinitions>
+                            <Grid Grid.Row="0">
+                                <TextBlock Text="Адрес"  Height="20" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,0,100,0" Style="{DynamicResource TextBlockStyle_Type3}" TextAlignment="Center"/>
+                                <TextBlock Text="NP"  Height="20" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,0,0,0" Style="{DynamicResource TextBlockStyle_Type3}" TextAlignment="Center"/>
+                                <TextBlock Text="Канал"  Height="20" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="100,0,0,0" Style="{DynamicResource TextBlockStyle_Type3}" TextAlignment="Center"/>
+                            </Grid>
+                            <Grid Grid.Row="1">
+                                <TextBox PreviewTextInput="Cheking_for_numbers" Width="40" Height="18" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,0,100,0" Style="{DynamicResource TextBoxStyle_Type1}" TextAlignment="Center"/>
+                                <TextBox PreviewTextInput="Cheking_for_numbers" Width="40" Height="18" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0" Style="{DynamicResource TextBoxStyle_Type1}" TextAlignment="Center"/>
+                                <TextBox PreviewTextInput="Cheking_for_numbers" Width="40" Height="18" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="100,0,0,0" Style="{DynamicResource TextBoxStyle_Type1}" TextAlignment="Center"/>
+                            </Grid>
+                            <Grid Grid.Row="2">
+                                <TextBox PreviewTextInput="Cheking_for_numbers" Width="40" Height="18" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,0,100,0" Style="{DynamicResource TextBoxStyle_Type1}" TextAlignment="Center"/>
+                                <TextBox PreviewTextInput="Cheking_for_numbers" Width="40" Height="18" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0" Style="{DynamicResource TextBoxStyle_Type1}" TextAlignment="Center"/>
+                                <TextBox PreviewTextInput="Cheking_for_numbers" Width="40" Height="18" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="100,0,0,0" Style="{DynamicResource TextBoxStyle_Type1}" TextAlignment="Center"/>
+                            </Grid>
+                            <Grid Grid.Row="3">
+                                <TextBox PreviewTextInput="Cheking_for_numbers" Width="40" Height="18" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,0,100,0" Style="{DynamicResource TextBoxStyle_Type1}" TextAlignment="Center"/>
+                                <TextBox PreviewTextInput="Cheking_for_numbers" Width="40" Height="18" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0" Style="{DynamicResource TextBoxStyle_Type1}" TextAlignment="Center"/>
+                                <TextBox PreviewTextInput="Cheking_for_numbers" Width="40" Height="18" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="100,0,0,0" Style="{DynamicResource TextBoxStyle_Type1}" TextAlignment="Center"/>
+                            </Grid>
+                            <Grid Grid.Row="4">
+                                <TextBox PreviewTextInput="Cheking_for_numbers" Width="40" Height="18" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,0,100,0" Style="{DynamicResource TextBoxStyle_Type1}" TextAlignment="Center"/>
+                                <TextBox PreviewTextInput="Cheking_for_numbers" Width="40" Height="18" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0" Style="{DynamicResource TextBoxStyle_Type1}" TextAlignment="Center"/>
+                                <TextBox PreviewTextInput="Cheking_for_numbers" Width="40" Height="18" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="100,0,0,0" Style="{DynamicResource TextBoxStyle_Type1}" TextAlignment="Center"/>
+                            </Grid>
+                            <Grid Grid.Row="5">
+                                <TextBox PreviewTextInput="Cheking_for_numbers" Width="40" Height="18" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,0,100,0" Style="{DynamicResource TextBoxStyle_Type1}" TextAlignment="Center"/>
+                                <TextBox PreviewTextInput="Cheking_for_numbers" Width="40" Height="18" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0" Style="{DynamicResource TextBoxStyle_Type1}" TextAlignment="Center"/>
+                                <TextBox PreviewTextInput="Cheking_for_numbers" Width="40" Height="18" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="100,0,0,0" Style="{DynamicResource TextBoxStyle_Type1}" TextAlignment="Center"/>
+                            </Grid>
+                        </Grid>
+                    </Grid>
+                    
+                    
 
                 </Grid>
             </Border>
